# file-server

./: pyproject.toml
document/templates/: document_manage.html
documents/: admin.py  api_views.py  forms.py  models.py  serializers.py  styles.css  urls.py  views.py
mysite/: settings.py  urls.py
